<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/nav_item_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.myapplication.ui.gallery.DailyMeatFragment"
        android:label="@string/nav_item_daily_meal"
        tools:layout="@layout/daily_meet_fragment" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.myapplication.ui.slideshow.FavouriteFragment"
        android:label="@string/nav_item_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.myapplication.ui.cart.CartFragment"
        android:label="@string/nav_item_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>