<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Nút quay lại -->
    <TextView
        android:id="@+id/txtBack"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="Quay lại"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <!-- Avatar -->
    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24"
        android:scaleType="centerInside"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtBack"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/man"
        />

    <!-- Form thông tin người dùng -->
    <ScrollView
        android:id="@+id/scrollForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar"
        app:layout_constraintBottom_toTopOf="@id/layoutButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/th_ng_tin_c_nh_n"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    />
            </LinearLayout>
            <!-- Tên -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/t_n"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/demo"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/demo"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <!-- Giới tính -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gi_i_t_nh"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nam"
                        android:textColor="@android:color/black"/>

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n"
                        android:textColor="@android:color/black"/>
                </RadioGroup>
            </LinearLayout>


            <!-- Ngày sinh -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/ng_y_sinh"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/etDob"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/demo"
                    android:inputType="date"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <!-- Role -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/m_t_kh_u"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/demo"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    tools:ignore="TextFields" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Layout chứa nút -->
    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Nút cập nhật -->
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/c_p_nh_t"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_700"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"
            />

        <!-- Nút đăng xuất -->
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ng_xu_t"
            android:textAllCaps="false"
            android:backgroundTint="@color/purple_500"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
