<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg4"
        android:scaleType="centerCrop"
        android:foreground="@drawable/foreground_design"
        android:id="@+id/imagesView3"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d5_restaurent_app"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imagesView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2"
        android:id="@+id/textView4"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#FBFBFB"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:id="@+id/textView5"
            />
    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/userName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/emailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="30dp"
        android:id="@+id/editTextEmail"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:drawableStart="@drawable/password_key"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="30dp"
        android:id="@+id/editTextPassword"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias=".7"
        android:id="@+id/btn2"
        android:background="@drawable/btn_bg_design"
        android:textSize="16sp"
        android:padding="14dp"
        android:onClick="handleRegister"

        />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bạn đã có tài khoản?"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewLogin"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đăng nhập"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>